; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_kpi_interface.c_ifnet_set_idle_flags.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_kpi_interface.c_ifnet_set_idle_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rnh_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ifnet_set_idle_flags(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @rnh_lock, align 4
  %9 = call i32 @lck_mtx_lock(i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @ifnet_lock_exclusive(i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @ifnet_set_idle_flags_locked(i32 %12, i32 %13, i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @ifnet_lock_done(i32 %16)
  %18 = load i32, i32* @rnh_lock, align 4
  %19 = call i32 @lck_mtx_unlock(i32 %18)
  %20 = load i32, i32* %7, align 4
  ret i32 %20
}

declare dso_local i32 @lck_mtx_lock(i32) #1

declare dso_local i32 @ifnet_lock_exclusive(i32) #1

declare dso_local i32 @ifnet_set_idle_flags_locked(i32, i32, i32) #1

declare dso_local i32 @ifnet_lock_done(i32) #1

declare dso_local i32 @lck_mtx_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
